--- a/client/templates/newMeet.html
+++ b/client/templates/newMeet.html
@@ -1,29 +1,78 @@
 <template name="newMeet">
-<div class="container">
-  <button class="btn btn-success btn-lg" data-toggle="modal" data-target="#newMeetForm">
-    New Meetup
-  </button>
+  <div class="container">
+    <button class="btn btn-success btn-lg" data-toggle="modal" data-target="#newMeetForm">
+      New Meetup
+    </button>
 
-  <div class="modal fade" id="newMeetForm">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Let's meetup</h4>
-        </div>
-        <div class="modal-body">
+    <div class="modal fade" id="newMeetForm">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title">Let's meetup</h4>
+          </div>
+          <div class="modal-body">
 
+            <form class="form-horizontal" name="commentform" method="post" action="send_form_email.php">
+
+              <div class="form-group">
+                <label class="control-label col-md-2" for="first_name">Start:</label>
+                <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+                  
+                <input type="text" class="form-control" id="meetTile" placeholder="Meet Title">
+                </div>
+              </div>
+
+              <div class="form-group">
+
+                <label class="control-label col-md-2" for="first_name">Start:</label>
+
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                  <input type="date" name="start" id="inputStart" class="form-control" value="" required="required" title="">
+                </div>
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                  <input type="time" name="" id="input" class="form-control" value="" required="required" title="">
+                </div>
+              </div>
+              <div class="form-group">
+
+                <label class="control-label col-md-2" for="first_name">End:</label>
+
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                  <input type="date" name="start" id="inputStart" class="form-control" value="" required="required" title="">
+                </div>
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                  <input type="time" name="" id="input" class="form-control" value="" required="required" title="">
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="input" class="col-sm-2 control-label">Hoster:</label>
+                <div class="col-sm-4">
+                  <input type="text" name="" id="input" class="form-control" value="" required="required" pattern="" title="">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-2 control-label">Detail:</label>
+                <div class="col-sm-10 col-sm-offset-2">
+                   <textarea class="form-control" rows="3"></textarea>
+                </div>
+              </div>
+
+
+            </form>
+
+
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary save">Save</button>
+            </div>
+          </div>
+          <!-- /.modal-content -->
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
+        <!-- /.modal-dialog -->
       </div>
-      <!-- /.modal-content -->
+      <!-- /.modal -->
     </div>
-    <!-- /.modal-dialog -->
   </div>
-  <!-- /.modal -->
-</div>
-
 </template>
