--- a/client/templates/newMeet.html
+++ b/client/templates/newMeet.html
@@ -15,7 +15,7 @@
 
             <form class="form-horizontal" name="commentform" method="post" action="send_form_email.php">
 
-              <div class="form-group">
+              <div class="form-group" id="titleGroup">
                 <label class="control-label col-md-2" for="meetTitle">Title:</label>
                 <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
                   
@@ -23,7 +23,7 @@
                 </div>
               </div>
 
-              <div class="form-group">
+              <div class="form-group" id='startGroup'>
 
                 <label class="control-label col-md-2" for="startDatetime">Start:</label>
 
@@ -34,7 +34,7 @@
                   <input type="time" name="" id="startTime" class="form-control" value="" required="required" title="">
                 </div>
               </div>
-              <div class="form-group">
+              <div class="form-group" id="endGroup">
 
                 <label class="control-label col-md-2" for="endDatetime">End:</label>
 
@@ -42,7 +42,8 @@
                   <input type="date" name="start" id="endDate" class="form-control" value="" required="required" title="">
                 </div>
                 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                  <input type="time" name="" id="endTime" class="form-control" value="" required="required" title="">
+                  <input type="time" name="" id="endTime" class="form-control" value="" required="required" title="" data-format="HH:mm"
+>
                 </div>
               </div>
 
@@ -55,7 +56,7 @@
               <div class="form-group">
                 <label class="col-sm-2 control-label">Detail:</label>
                 <div class="col-sm-10 col-sm-offset-2">
-                   <textarea class="form-control" rows="3" placholder="leave blank if you dont'w need"></textarea>
+                   <textarea class="form-control" rows="3" id="meetDetail" placholder="leave blank if you dont'w need"></textarea>
                 </div>
               </div>
             </form>
