--- a/client/templates/newMeet.html
+++ b/client/templates/newMeet.html
@@ -47,7 +47,7 @@
                 </div>
               </div>
 
-              <div class="form-group">
+              <div class="form-group" id="hosterGroup">
                 <label for="input" class="col-sm-2 control-label">Hoster:</label>
                 <div class="col-sm-4">
                   <input type="text" name="" id="hoster" class="form-control" value="" required="required" pattern="" title="">
