--- a/client/templates/meets.html
+++ b/client/templates/meets.html
@@ -8,7 +8,7 @@
 
       <div class="row">
         <h1>{{title}}</h1>
-        <h3> <small>host by</small> {{owner}}  <small>{{shortTimeDate start}} ~ </small> 
+        <h3> <small>host by</small> {{hoster}}  <small>{{shortTimeDate start}} ~ </small> 
             <small>{{shortTimeDate end}} </small></h3>    
       </div>
       <div class="row">
