update to meteor 1.0 fix date

--- a/client/templates/newMeet.html
+++ b/client/templates/newMeet.html
@@ -19,7 +19,7 @@
                 <label class="control-label col-md-2" for="meetTitle">Title:</label>
                 <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
                   
-                <input type="text" class="form-control" id="meetTitle" placeholder="Meet Title">
+                <input type="text" class="form-control" id="meetTitle" placeholder="Fill your Meet Title">
                 </div>
               </div>
 
